add linebreaks to make create_build_factory more readable
Signed-off-by: Gerd Hoffmann <kraxel@redhat.com>

--- a/qemu-master.cfg
+++ b/qemu-master.cfg
@@ -681,17 +681,29 @@ from buildbot.steps.shell import Configure, Compile, ShellCommand, Test
 #  test=None
 #)
 
-def create_build_factory(repourl, branch="HEAD", make="make", configure_args=[], outoftree=False):
+def create_build_factory(repourl, branch="HEAD",
+                         make="make", configure_args=[],
+                         outoftree=False):
     """Return a BuildFactory pre-configured with common build steps"""
     f = factory.BuildFactory()
-    f.addStep(Git(repourl=repourl, timeout=2400, mode='copy', retry=(5 * 60, 3), locks=repo_locks_from_url(repourl)))
+    f.addStep(Git(repourl=repourl,
+                  timeout=2400, mode='copy', retry=(5 * 60, 3),
+                  locks=repo_locks_from_url(repourl)))
     workdir = f.workdir
     if outoftree:
-        f.addStep(ShellCommand(command="mkdir -p outoftree", env={'LANG': 'C'}))
+        f.addStep(ShellCommand(command="mkdir -p outoftree",
+                               env={'LANG': 'C'}))
         workdir = os.path.join(workdir, 'outoftree')
-    f.addStep(Configure(command=["./configure"] + list(configure_args), env={'LANG': 'C'}, workdir=workdir))
-    f.addStep(Compile(command=[make, "CFLAGS=-O2"], env={'LANG': 'C'}, timeout=2400, workdir=workdir))
-    f.addStep(Test(command=[make, "check"], env={'LANG': 'C'}, maxTime=2400, workdir=workdir))
+    f.addStep(Configure(command=["./configure"] + list(configure_args),
+                        env={'LANG': 'C'}, workdir=workdir))
+    f.addStep(Compile(command=[make, "CFLAGS=-O2"],
+                      env={'LANG': 'C'},
+                      timeout=2400,
+                      workdir=workdir))
+    f.addStep(Test(command=[make, "check"],
+                   env={'LANG': 'C'},
+                   maxTime=2400,
+                   workdir=workdir))
     return f
 
 f_default = create_build_factory("git://git.qemu-project.org/qemu.git")
