make tests configurable
Signed-off-by: Gerd Hoffmann <kraxel@redhat.com>

--- a/qemu-master.cfg
+++ b/qemu-master.cfg
@@ -683,7 +683,7 @@ from buildbot.steps.shell import Configure, Compile, ShellCommand, Test
 
 def create_build_factory(repourl, branch="HEAD",
                          make="make", configure_args=[],
-                         outoftree=False):
+                         outoftree=False, runtests=True):
     """Return a BuildFactory pre-configured with common build steps"""
     f = factory.BuildFactory()
     f.addStep(Git(repourl=repourl,
@@ -700,10 +700,11 @@ def create_build_factory(repourl, branch="HEAD",
                       env={'LANG': 'C'},
                       timeout=2400,
                       workdir=workdir))
-    f.addStep(Test(command=[make, "check"],
-                   env={'LANG': 'C'},
-                   maxTime=2400,
-                   workdir=workdir))
+    if runtests:
+        f.addStep(Test(command=[make, "check"],
+                       env={'LANG': 'C'},
+                       maxTime=2400,
+                       workdir=workdir))
     return f
 
 f_default = create_build_factory("git://git.qemu-project.org/qemu.git")
