fix out-of-tree build
Signed-off-by: Gerd Hoffmann <kraxel@redhat.com>

--- a/qemu-master.cfg
+++ b/qemu-master.cfg
@@ -690,11 +690,13 @@ def create_build_factory(repourl, branch="HEAD",
                   timeout=2400, mode='copy', retry=(5 * 60, 3),
                   locks=repo_locks_from_url(repourl)))
     workdir = f.workdir
+    configure = "./configure"
     if outoftree:
         f.addStep(ShellCommand(command="mkdir -p outoftree",
                                env={'LANG': 'C'}))
         workdir = os.path.join(workdir, 'outoftree')
-    f.addStep(Configure(command=["./configure"] + list(configure_args),
+        configure = "../configure"
+    f.addStep(Configure(command=[configure] + list(configure_args),
                         env={'LANG': 'C'}, workdir=workdir))
     f.addStep(Compile(command=[make, "CFLAGS=-O2"],
                       env={'LANG': 'C'},
