use --disable-debug-info
Signed-off-by: Gerd Hoffmann <kraxel@redhat.com>

--- a/qemu-master.cfg
+++ b/qemu-master.cfg
@@ -696,9 +696,11 @@ def create_build_factory(repourl, branch="HEAD",
                                env={'LANG': 'C'}))
         workdir = os.path.join(workdir, 'outoftree')
         configure = "../configure"
-    f.addStep(Configure(command=[configure] + list(configure_args),
+    f.addStep(Configure(command=[configure,
+                                 "--disable-debug-info"] +
+                        list(configure_args),
                         env={'LANG': 'C'}, workdir=workdir))
-    f.addStep(Compile(command=[make, "CFLAGS=-O2"],
+    f.addStep(Compile(command=[make],
                       env={'LANG': 'C'},
                       timeout=2400,
                       workdir=workdir))
