--- a/qemu-master.cfg
+++ b/qemu-master.cfg
@@ -699,7 +699,9 @@ def create_build_factory(repourl, branch="HEAD",
     f.addStep(Configure(command=[configure,
                                  "--disable-debug-info"] +
                         list(configure_args),
-                        env={'LANG': 'C'}, workdir=workdir))
+                        env={'LANG': 'C'},
+                        logfiles={"config.log": "config.log"},
+                        workdir=workdir))
     f.addStep(Compile(command=[make],
                       env={'LANG': 'C'},
                       timeout=2400,
