Add stefanha's block branch
I co-maintain the block layer with Kevin Wolf <kwolf@redhat.com>.  We
have our own repos and I'd like to ensure that mine receives coverage
too.

Just use AnyBranchScheduler() for now.  Not sure nightly is necessary.

Signed-off-by: Stefan Hajnoczi <stefanha@redhat.com>

--- a/qemu-master.cfg
+++ b/qemu-master.cfg
@@ -201,6 +201,14 @@ block_builders = [
   "block_mingw32",
 ]
 
+block_stefanha_builders = [
+  "block_stefanha_x86_64_debian_6_0",
+  "block_stefanha_i386_debian_6_0",
+  "block_stefanha_openbsd_current",
+  "block_stefanha_openbsd_4.9",
+  "block_stefanha_mingw32",
+]
+
 pci_builders = [
   "pci_x86_64_debian_6_0",
   "pci_i386_debian_6_0",
@@ -523,6 +531,15 @@ c['schedulers'].append(
 
 c['schedulers'].append(
   AnyBranchScheduler(
+    name="block_stefanha",
+    branches=["block"],
+    treeStableTimer=7200,
+    builderNames=block_stefanha_builders
+  )
+)
+
+c['schedulers'].append(
+  AnyBranchScheduler(
     name="pci",
     branches=["pci"],
     treeStableTimer=7200,
@@ -753,6 +770,11 @@ f_virtfs = create_build_factory("git://github.com/kvaneesh/qemu.git", branch="fo
 f_block = create_build_factory("git://repo.or.cz/qemu/kevin.git", branch="block")
 f_block_openbsd = create_build_factory("git://repo.or.cz/qemu/kevin.git", branch="block", make="gmake", configure_args=["--extra-cflags=-Wno-redundant-decls"])
 f_block_mingw32 = create_build_factory("git://repo.or.cz/qemu/kevin.git", branch="block", configure_args=["--cross-prefix=i686-pc-mingw32-"])
+
+# block_stefanha (block layer co-maintainership) - stefanha / branch: block
+f_block_stefanha = create_build_factory("git://github.com/stefanha/qemu.git", branch="block")
+f_block_stefanha_openbsd = create_build_factory("git://github.com/stefanha/qemu.git", branch="block", make="gmake", configure_args=["--extra-cflags=-Wno-redundant-decls"])
+f_block_stefanha_mingw32 = create_build_factory("git://github.com/stefanha/qemu.git", branch="block", configure_args=["--cross-prefix=i686-pc-mingw32-"])
 
 # pci - mst / branch: pci
 f_pci = create_build_factory("git://github.com/mstsirkin/qemu.git", branch="pci")
@@ -1002,6 +1024,47 @@ builders.append({
   'builddir': 'block_mingw32',
   'locks': [slow_lock],
   'factory': f_block_mingw32
+})
+
+## block_stefanha Builders
+builders.append({
+  'name': 'block_stefanha_x86_64_debian_6_0',
+  'slavenames': bots_x86_64_debian_6_0,
+  'builddir': 'block_stefanha_x86_64_debian_6_0',
+  'locks': [slow_lock],
+  'factory': f_block_stefanha
+})
+
+builders.append({
+  'name': 'block_stefanha_i386_debian_6_0',
+  'slavenames': bots_i386_debian_6_0,
+  'builddir': 'block_stefanha_i386_debian_6_0',
+  'locks': [slow_lock],
+  'factory': f_block_stefanha
+})
+
+builders.append({
+  'name': 'block_stefanha_openbsd_current',
+  'slavenames': bots_openbsd_current,
+  'builddir': 'block_stefanha_openbsd_current',
+  'locks': [slow_lock],
+  'factory': f_block_stefanha_openbsd
+})
+
+builders.append({
+  'name': 'block_stefanha_openbsd_4.9',
+  'slavenames': bots_openbsd49,
+  'builddir': 'block_stefanha_openbsd_4.9',
+  'locks': [slow_lock],
+  'factory': f_block_stefanha_openbsd
+})
+
+builders.append({
+  'name': 'block_stefanha_mingw32',
+  'slavenames': bots_mingw32,
+  'builddir': 'block_stefanha_mingw32',
+  'locks': [slow_lock],
+  'factory': f_block_stefanha_mingw32
 })
 
 ## pci Builders
