Add stefanha's net branch
I maintain the net tree.  Add it to the buildbot so it receives
coverage.

Signed-off-by: Stefan Hajnoczi <stefanha@redhat.com>

--- a/qemu-master.cfg
+++ b/qemu-master.cfg
@@ -209,6 +209,14 @@ block_stefanha_builders = [
   "block_stefanha_mingw32",
 ]
 
+net_builders = [
+  "net_x86_64_debian_6_0",
+  "net_i386_debian_6_0",
+  "net_openbsd_current",
+  "net_openbsd_4.9",
+  "net_mingw32",
+]
+
 pci_builders = [
   "pci_x86_64_debian_6_0",
   "pci_i386_debian_6_0",
@@ -540,6 +548,15 @@ c['schedulers'].append(
 
 c['schedulers'].append(
   AnyBranchScheduler(
+    name="net",
+    branches=["net"],
+    treeStableTimer=7200,
+    builderNames=net_builders
+  )
+)
+
+c['schedulers'].append(
+  AnyBranchScheduler(
     name="pci",
     branches=["pci"],
     treeStableTimer=7200,
@@ -775,6 +792,11 @@ f_block_mingw32 = create_build_factory("git://repo.or.cz/qemu/kevin.git", branch
 f_block_stefanha = create_build_factory("git://github.com/stefanha/qemu.git", branch="block")
 f_block_stefanha_openbsd = create_build_factory("git://github.com/stefanha/qemu.git", branch="block", make="gmake", configure_args=["--extra-cflags=-Wno-redundant-decls"])
 f_block_stefanha_mingw32 = create_build_factory("git://github.com/stefanha/qemu.git", branch="block", configure_args=["--cross-prefix=i686-pc-mingw32-"])
+
+# net - stefanha / branch: net
+f_net = create_build_factory("git://github.com/stefanha/qemu.git", branch="net")
+f_net_openbsd = create_build_factory("git://github.com/stefanha/qemu.git", branch="net", make="gmake", configure_args=["--extra-cflags=-Wno-redundant-decls"])
+f_net_mingw32 = create_build_factory("git://github.com/stefanha/qemu.git", branch="net", configure_args=["--cross-prefix=i686-pc-mingw32-"])
 
 # pci - mst / branch: pci
 f_pci = create_build_factory("git://github.com/mstsirkin/qemu.git", branch="pci")
@@ -1065,6 +1087,47 @@ builders.append({
   'builddir': 'block_stefanha_mingw32',
   'locks': [slow_lock],
   'factory': f_block_stefanha_mingw32
+})
+
+## net Builders
+builders.append({
+  'name': 'net_x86_64_debian_6_0',
+  'slavenames': bots_x86_64_debian_6_0,
+  'builddir': 'net_x86_64_debian_6_0',
+  'locks': [slow_lock],
+  'factory': f_net
+})
+
+builders.append({
+  'name': 'net_i386_debian_6_0',
+  'slavenames': bots_i386_debian_6_0,
+  'builddir': 'net_i386_debian_6_0',
+  'locks': [slow_lock],
+  'factory': f_net
+})
+
+builders.append({
+  'name': 'net_openbsd_current',
+  'slavenames': bots_openbsd_current,
+  'builddir': 'net_openbsd_current',
+  'locks': [slow_lock],
+  'factory': f_net_openbsd
+})
+
+builders.append({
+  'name': 'net_openbsd_4.9',
+  'slavenames': bots_openbsd49,
+  'builddir': 'net_openbsd_4.9',
+  'locks': [slow_lock],
+  'factory': f_net_openbsd
+})
+
+builders.append({
+  'name': 'net_mingw32',
+  'slavenames': bots_mingw32,
+  'builddir': 'net_mingw32',
+  'locks': [slow_lock],
+  'factory': f_net_mingw32
 })
 
 ## pci Builders
