Update trivial-patches repo URL
I moved from repo.or.cz to github.com.

Signed-off-by: Stefan Hajnoczi <stefanha@redhat.com>

--- a/qemu-master.cfg
+++ b/qemu-master.cfg
@@ -808,7 +808,7 @@ f_qmp = create_build_factory("git://repo.or.cz/qemu/qmp-unstable.git", branch="q
 #f_monitor = create_build_factory("git://repo.or.cz/qemu/qmp-unstable.git", branch="queue/monitor")
 
 # trivial-patches - stefanha / branch: trivial-patches
-f_trivialp = create_build_factory("git://repo.or.cz/qemu/stefanha.git", branch="trivial-patches")
+f_trivialp = create_build_factory("git://github.com/stefanha/qemu.git", branch="trivial-patches")
 
 # agraf / s390-next
 f_s390 = create_build_factory("git://repo.or.cz/qemu/agraf.git", branch="s390-next")
