fixing issues with local import

--- a/kvm-master.cfg
+++ b/kvm-master.cfg
@@ -10,6 +10,8 @@
 ##
 # documentation: see docs/config.xhtml
 
+import sys
+sys.path.append('/var/lib/buildbot/kvm')
 from database_authority import *
 
 c = BuildmasterConfig = {}
