--- a/qemu-kvm-master.cfg
+++ b/qemu-kvm-master.cfg
@@ -35,6 +35,8 @@
 
 ####
 
+import sys
+sys.path.append('/var/lib/buildbot/qemu-kvm')
 from database_authority import *
 
 c = BuildmasterConfig = {}
