--- a/qemu-master.cfg
+++ b/qemu-master.cfg
@@ -29,6 +29,8 @@
 ####
 
 import os
+import sys
+sys.path.append('/var/lib/buildbot/qemu')
 from database_authority import *
 
 c = BuildmasterConfig = {}
