Enable git submodules so dtc/ is populated
Many machines do not have the device tree compiler installed or their
distro does not ship a suitable version.  Enable git submodules so we
pull in dtc from source and can build successfully.

Signed-off-by: Stefan Hajnoczi <stefanha@redhat.com>

--- a/qemu-master.cfg
+++ b/qemu-master.cfg
@@ -748,7 +748,8 @@ def create_build_factory(repourl, branch="HEAD",
     f = factory.BuildFactory()
     f.addStep(Git(repourl=repourl,
                   timeout=2400, mode='copy', retry=(5 * 60, 3),
-                  locks=repo_locks_from_url(repourl)))
+                  locks=repo_locks_from_url(repourl),
+                  submodules=True))
     workdir = f.workdir
     configure = "./configure"
     if outoftree:
