--- a/qemu-master.cfg
+++ b/qemu-master.cfg
@@ -799,7 +799,7 @@ f_openbsd = create_build_factory("git://git.qemu-project.org/qemu.git", make="gm
 # xen40 branches
 f_xen40 = create_build_factory("git://git.qemu-project.org/qemu.git",
     configure_args=["--enable-xen", "--extra-cflags=-I/home/build/install/xen-4.0.x/include/", "--extra-ldflags=-L/home/build/install/xen-4.0.x/lib64/"],
-    extra_env={"LD_LIBRARY_PATH": "/home/build/install/xen-4.0.x/lib/")
+    extra_env={"LD_LIBRARY_PATH": "/home/build/install/xen-4.0.x/lib/"})
 
 # xen41 branches
 f_xen41 = create_build_factory("git://git.qemu-project.org/qemu.git",
@@ -814,7 +814,7 @@ f_xen42 = create_build_factory("git://git.qemu-project.org/qemu.git",
 # xen_unstable branches
 f_xen_unstable = create_build_factory("git://git.qemu-project.org/qemu.git",
     configure_args=["--enable-xen", "--extra-cflags=-I/home/build/install/xen-unstable/include/", "--extra-ldflags=-L/home/build/install/xen-unstable/lib/"],
-    extra_env={"LD_LIBRARY_PATH": "/home/build/install/xen-unstable/lib/")
+    extra_env={"LD_LIBRARY_PATH": "/home/build/install/xen-unstable/lib/"})
 
 # macosx build (based on Gerd Hoffmann's buildbot config)
 f_macosx = create_build_factory("git://git.qemu-project.org/qemu.git", configure_args=["--prefix=/sw"])
