s390: Build for z10 instead of z196.
Upstream defconfig wants to optimize for z196; however, gcc 4.5 as
currently used doesn't support the z196 optimizations yet. Let's
switch to z10 instead which should be fine.

Signed-off-by: Cornelia Huck <cornelia.huck@de.ibm.com>

--- a/kvm-master.cfg
+++ b/kvm-master.cfg
@@ -135,6 +135,9 @@ def kernelArchFactory(arch):
                 kernelModules = [ "KVM", "KVM_AMD", "KVM_INTEL" ];
         elif arch == 's390':
                 kernelModules = [ "KVM" ];
+                # revert when upgrading to gcc 4.6 or later
+                kernelOptionsYes = [ "MARCH_Z10" ];
+                kernelOptionsNo = [ "MARCH_Z196" ];
         elif arch == 'ia64':
                 kernelModules = [ "KVM", "KVM_INTEL" ];
         elif arch == 'ppc44x':
