removed Daniel Gollub

--- a/qemu-kvm-master.cfg
+++ b/qemu-kvm-master.cfg
@@ -50,10 +50,7 @@ from buildbot.steps.source import Git
 repository = Git(repourl="git://git.kernel.org/pub/scm/virt/kvm/qemu-kvm")
 
 emailAddressFrom = "qemu-kvm@buildbot.b1-systems.de"
-#emailAddressesNotify = ["berendt@b1-systems.de", "gollub@b1-systems.de"]
-emailAddressesNotify = ["kvm@vger.kernel.org", "gollub@b1-systems.de"] # gollubis only in there for testing purposes
-#emailAddressesNotify = ["gollub@b1-systems.de"] # gollub is only in there for testing purposes
-#emailAddressesNotify = ["berendt@b1-systems.de"] # berendt is only in there for testing purposes
+emailAddressesNotify = ["kvm@vger.kernel.org"]
 
 ####### STATUS TARGETS
 
