--- a/kvm-master.cfg
+++ b/kvm-master.cfg
@@ -24,9 +24,7 @@ c['buildbotURL'] = "http://buildbot.b1-systems.de/kvm/"
 
 ####### EMAIL STUFF
 emailAddressFrom = "kvm@buildbot.b1-systems.de"
-#emailAddressesNotify = ["berendt@b1-systems.de", "gollub@b1-systems.de"]
-#emailAddressesNotify = ["gollub@b1-systems.de"]
-emailAddressesNotify = ["kvm@vger.kernel.org", "gollub@b1-systems.de"]
+emailAddressesNotify = ["kvm@vger.kernel.org"]
 
 ####### BUILDSLAVES
 
