--- a/qemu-master.cfg
+++ b/qemu-master.cfg
@@ -43,8 +43,7 @@ c['buildbotURL'] = "http://buildbot.b1-systems.de/qemu/"
 from buildbot.steps.source import Git
 
 emailAddressFrom = "qemu@buildbot.b1-systems.de"
-#emailAddressesNotify = ["gollub@b1-systems.de"] # gollub is only in there for testing purposes
-emailAddressesNotify = ["gollub@b1-systems.de", "qemu-devel@nongnu.org", "agraf@suse.de", "lcapitulino@redhat.com"]
+emailAddressesNotify = ["qemu-devel@nongnu.org", "agraf@suse.de", "lcapitulino@redhat.com"]
 
 ####### STATUS TARGETS
 
