Add build configs for Xen 4.3 and 4.4.

--- a/qemu-master.cfg
+++ b/qemu-master.cfg
@@ -142,6 +142,12 @@ bots_xen41 = ["anthony_xen"]
 # xen 4.2
 bots_xen42 = ["anthony_xen"]
 
+# xen 4.3
+bots_xen43 = ["anthony_xen"]
+
+# xen 4.4
+bots_xen44 = ["anthony_xen"]
+
 # xen unstable
 bots_xen_unstable = ["anthony_xen"]
 
@@ -249,6 +255,14 @@ xen41_builders = [
 
 xen42_builders = [
   "xen42",
+]
+
+xen43_builders = [
+  "xen43",
+]
+
+xen44_builders = [
+  "xen44",
 ]
 
 xen_unstable_builders = [
@@ -439,6 +453,24 @@ c['schedulers'].append(
   )
 )
 
+c['schedulers'].append(
+  Nightly(
+    name="nightly_xen43",
+    branch="master",
+    builderNames=xen43_builders,
+    hour=10, minute=00
+  )
+)
+
+c['schedulers'].append(
+  Nightly(
+    name="nightly_xen44",
+    branch="master",
+    builderNames=xen44_builders,
+    hour=11, minute=00
+  )
+)
+
 
 c['schedulers'].append(
   Nightly(
@@ -604,6 +636,24 @@ c['schedulers'].append(
     branches=["master"],
     treeStableTimer=7200,
     builderNames=xen42_builders
+  )
+)
+
+c['schedulers'].append(
+  AnyBranchScheduler(
+    name="xen43",
+    branches=["master"],
+    treeStableTimer=7200,
+    builderNames=xen43_builders
+  )
+)
+
+c['schedulers'].append(
+  AnyBranchScheduler(
+    name="xen44",
+    branches=["master"],
+    treeStableTimer=7200,
+    builderNames=xen44_builders
   )
 )
 
@@ -809,6 +859,16 @@ f_xen41 = create_build_factory("git://git.qemu-project.org/qemu.git",
 f_xen42 = create_build_factory("git://git.qemu-project.org/qemu.git",
     configure_args=["--enable-xen", "--extra-cflags=-I/home/build/install/xen-4.2.x/include/", "--extra-ldflags=-L/home/build/install/xen-4.2.x/lib/"],
     extra_env={"LD_LIBRARY_PATH": "/home/build/install/xen-4.2.x/lib/"})
+
+# xen43 branches
+f_xen43 = create_build_factory("git://git.qemu-project.org/qemu.git",
+    configure_args=["--enable-xen", "--extra-cflags=-I/home/build/install/xen-4.3.x/include/", "--extra-ldflags=-L/home/build/install/xen-4.3.x/lib/"],
+    extra_env={"LD_LIBRARY_PATH": "/home/build/install/xen-4.3.x/lib/"})
+
+# xen44 branches
+f_xen44 = create_build_factory("git://git.qemu-project.org/qemu.git",
+    configure_args=["--enable-xen", "--extra-cflags=-I/home/build/install/xen-4.4.x/include/", "--extra-ldflags=-L/home/build/install/xen-4.4.x/lib/"],
+    extra_env={"LD_LIBRARY_PATH": "/home/build/install/xen-4.4.x/lib/"})
 
 # xen_unstable branches
 f_xen_unstable = create_build_factory("git://git.qemu-project.org/qemu.git",
@@ -1211,6 +1271,24 @@ builders.append({
   'builddir': 'xen42',
   'locks': [slow_lock],
   'factory': f_xen42
+})
+
+## xen43 Builders
+builders.append({
+  'name': 'xen43',
+  'slavenames': bots_xen43,
+  'builddir': 'xen43',
+  'locks': [slow_lock],
+  'factory': f_xen43
+})
+
+## xen44 Builders
+builders.append({
+  'name': 'xen44',
+  'slavenames': bots_xen44,
+  'builddir': 'xen44',
+  'locks': [slow_lock],
+  'factory': f_xen44
 })
 
 ## xen_unstable Builders
